# csplugin-events

./: .gitignore  .gitmodules  Makefile.am  configure.ac  csplugin-events.conf  csplugin-events.cpp  csplugin-events.h  csplugin-events.spec  csplugin-events.spec.in  csplugin-sysmon.conf  csplugin-sysmon.cpp  csplugin-sysmon.h  csplugin-sysmon.spec.in  events-alert.cpp  events-alert.h  events-conf.cpp  events-conf.h  events-db-sql.h  events-db.cpp  events-db.h  events-socket.cpp  events-socket.h  events-syslog.cpp  events-syslog.h  eventsctl.cpp  eventsctl.h  sysmon-alert-source.cpp  sysmon-alert-source.h  sysmon-alert.cpp  sysmon-alert.h  sysmon-conf.cpp  sysmon-conf.h  sysmon-db.cpp  sysmon-db.h  sysmon-socket.cpp  sysmon-socket.h  sysmon-syslog.cpp  sysmon-syslog.h  sysmonctl.cpp  sysmonctl.h
deploy/: rsyslog.conf
deploy/events.d/: 10-mem-swap-high.conf  10-process-segfault.conf  10-rootfs-capacity.conf  10-system-load-high.conf  10-system-out-of-memory.conf  20-media-error.conf  20-user-auth.conf  30-av-scanner-offline.conf  30-webconfig-error.conf
php/: libevents.php  libsysmon.php  test.php
